--- a/snakedenfitness/fitness/templates/fitness/edit_workout.html
+++ b/snakedenfitness/fitness/templates/fitness/edit_workout.html
@@ -3,7 +3,7 @@
 {% block body %}
  <div class="container p-0" style="margin-top: 25px; max-width: 25%;">
         <h1 style="text-align: center">Edit Workout Information</h1>
-        <form form method="POST" style="margin-top: 25px">
+        <form method="POST" style="margin-top: 25px">
             {% csrf_token %}
             {{ form.as_p }}
 
